--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,18 +8,15 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
-
 set(APP_NAME consumer_producer_app)
 
 set(
   HEADERS
-  include/main.h
-)
+  include/main.h)
 
 set(
   SOURCES
-  src/main.c
-)
+  src/main.c)
 
 add_executable(${APP_NAME} ${HEADERS} ${SOURCES})
 
@@ -29,3 +26,15 @@ target_include_directories(
   ${APP_NAME} 
   PRIVATE 
   ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+if (WIN32)
+  target_include_directories(
+    ${APP_NAME} 
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/build/PTHREADS-BUILT/include)
+
+  target_link_libraries(
+    ${APP_NAME}
+    PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/build/PTHREADS-BUILT/lib/pthreadVC3-w64.lib)
+endif()
